@@ -1,3 +1,7 @@
+2008-12-07  Alper KANAT  <alperkanat@raptiye.org>
+
+	* media/css/style.css: fixed some css layout problems in sticky posts..
+
 2008-12-06  Alper KANAT  <alperkanat@raptiye.org>
 
 	* templates/blog/homepage.html, templates/blog/sticky.html: fixed some
